#
# automake template for src/repartition directory
#
# $Id: Makefile.am 2 2003-08-13 19:26:11Z sorokine $
#

noinst_LIBRARIES = librepartition.a

librepartition_a_SOURCES = BSFC_combine_elements.C BSFC_create_bins.C \
    new_datatype.C BSFC_refine_partition.C repartition_BSFC.C \
    BSFC_update_and_send_elements.C  repartition_BSFC.h \
    BSFC_update_element_proc.C update_element_info.C fill.C




