#
# automake template for src/main/ directory
#

bin_PROGRAMS = VecDataPreproc

VecDataPreproc_SOURCES = vectordatpreproc.cpp cgis_trigrid.cpp cgis_trigrid.h cgis_vectordata.cpp cgis_vectordata.h cpolyline.cpp cpolyline.h

VecDataPreproc_CXXFLAGS = -I ../gisapi/

VecDataPreproc_LDADD = ../gisapi/libgisapi.a
