#
# automake template for the doc/help/html directory
#
# $Id: $
#
# Using doc prefix on the DATA primary,
# install as data files in the $(docdir) directory
doc_DATA = welcome.html options.html load_save.html general.html gis.html \
	material_map.html piles.html flux.html discharge.html \
        joboptions.html jobsubmission.html jobmonitor.html
