#
# automake template for the doc/help/html directory
#
# $Id: $
#
# Using doc prefix on the DATA primary,
# install as data files in the $(docdir) directory
doc_DATA = welcome.html options.html load_save.html gis.html run_parameters.html  \
	output_options.html material_model_and_map.html piles.html flux.html discharge.html \
        jobsubmission.html jobmonitor.html
